fix cv header too wide
lowered cv shortcut margin from 2rem all around to 2rem 1em

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 #resumeShortcut {
 	float: right;
-	margin: 2rem;
+	margin: 2rem 1em;
 	font-size: .75em;
 }
 
